output api: - introduce more simply buffer/output api under `io.jooby.output` - buffer: simplify buffer API fix #3604